Grow the SDK into SDK + framework: envelopes, @On, ordered dispatch, Bots
Everything a caller had to write again per bot moves into the library.

Events get envelopes built by one factory the gateway and the callback endpoint
share: QQMessageEvent for the six events carrying text (content, author,
segments, reply), QQNoticeEvent for the rest (scene, conversation, and the
actor/subject the routing table names per event), plus GroupJoinRequestEvent and
InteractionEvent, which answer themselves. A dispatch whose event names two
different people gets neither flattened into one accessor, and guild-space
numeric ids are deliberately not offered as openids.

@BotEvent and @Command become @On, because a command is a route with a text
matcher and the envelope parameter already says which events a method wants.
Rules can now bind parameters like handlers do, so a permission asks for the
field it reads instead of digging through the raw payload. Routes run in
(priority, registration order), block defaults to false and ends the chain only
after a route actually handled the dispatch; on a supplied Executor the bus
serialises per conversation and per route-within-conversation, so one slow
handler no longer delays its siblings on the same event.

Bots keys clients by app id and owns the shared callback socket, so an
application passes a port once instead of mounting routes per bot. Audit-pending
sends become an exception carrying the audit_id, and bot.audits() turns the
later MESSAGE_AUDIT_* event into a CompletableFuture.

Fixes a latent decoding bug on the way: a void operation whose response has a
body used to reach Gson as java.lang.Void and fail there.